--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,6 +37,27 @@
       {% endif %}
         <a class="nav-link" href="{{url_for('title')}}">Title</a>
       </li>
+      {% if title == 'Login' %}
+        <li class="nav-item active">
+      {% else %}
+        <li class="nav-item">
+      {% endif %}
+        <a class="nav-link" href="{{url_for('login')}}">Login</a>
+      </li>
+      {% if title == 'Register' %}
+        <li class="nav-item active">
+      {% else %}
+        <li class="nav-item">
+      {% endif %}
+        <a class="nav-link" href="{{url_for('register')}}">Register</a>
+      </li>
+      {% if title == 'Contact Us' %}
+        <li class="nav-item active">
+      {% else %}
+        <li class="nav-item">
+      {% endif %}
+        <a class="nav-link" href="{{url_for('contact')}}">Contact</a>
+      </li>
     </ul>
   </div>
   </nav>
@@ -44,7 +65,15 @@
 
 {% block content %}
   <header>
-    <!-- TODO: Add error handling or message here -->
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        {% for message in messages %}
+          <script type="text/javascript">
+            alert('{{ message }}');
+          </script>
+        {% endfor %}
+      {% endif %}
+    {% endwith %}
   </header>
   <main>
     {% block app_content %}{% endblock %}
