--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -48,6 +48,23 @@ body {
   width: 80%;
 }
 
+.prof-thumb-pic {
+  width: 30px
+  height: 30px;
+  margin-bottom: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.card > h4 {
+  padding-top: 15px;
+}
+
+#posts > .card:nth-child(n+2) {
+  margin-top: 30px;
+}
+
 footer{
   background-color: #343a40!important;
 }
