--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,6 +37,13 @@
       {% endif %}
         <a class="nav-link" href="{{url_for('title')}}">Title</a>
       </li>
+      {% if title == 'Profile' %}
+        <li class="nav-item active">
+      {% else %}
+        <li class="nav-item">
+      {% endif %}
+        <a class="nav-link" href="{{url_for('profile')}}">Profile</a>
+      </li>
       {% if title == 'Login' %}
         <li class="nav-item active">
       {% else %}
