Posts storing properly, TODO: add login

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -27,7 +27,7 @@
           {% if post.user_id == person.id %}
             <div class="card">
               <img src="http://placehold.it/30x30" alt="Thumbnail Picture" class="prof-thumb-pic">
-              <p class="card-subtitle">{{ post.date_posted }}</p>
+              <p class="card-subtitle">{{ post.date_posted.date() }}</p>
               <p class="card-subtitle">@{{ person.username }}</p>
               <h4>{{ post.tweet }}</h4>
             </div><!--ends tweet-->
