--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,7 +42,7 @@
       {% else %}
         <li class="nav-item">
       {% endif %}
-        <a class="nav-link" href="{{url_for('profile')}}">Profile</a>
+        <a class="nav-link" href="{{url_for('profile', username='maxsmith')}}">Profile</a>
       </li>
       {% if title == 'Login' %}
         <li class="nav-item active">
