User table completed, TODO: set up login.

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -23,15 +23,13 @@
           {{wtf.quick_form(form)}}
         </div>
 
-        {% for post in tweets %}
-          {% if post.user_id == person.id %}
-            <div class="card">
-              <img src="http://placehold.it/30x30" alt="Thumbnail Picture" class="prof-thumb-pic">
-              <p class="card-subtitle">{{ post.date_posted.date() }}</p>
-              <p class="card-subtitle">@{{ person.username }}</p>
-              <h4>{{ post.tweet }}</h4>
-            </div><!--ends tweet-->
-          {% endif %}
+        {% for post in person.posts[::-1] %}
+          <div class="card">
+            <img src="http://placehold.it/30x30" alt="Thumbnail Picture" class="prof-thumb-pic">
+            <p class="card-subtitle">{{ post.date_posted.date() }}</p>
+            <p class="card-subtitle">@{{ person.username }}</p>
+            <h4>{{ post.tweet }}</h4>
+          </div><!--ends tweet-->
         {% endfor %}
       </div> <!--ends col -8 for tweets-->
 
