--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,13 +37,19 @@
       {% endif %}
         <a class="nav-link" href="{{url_for('title')}}">Title</a>
       </li>
+
       {% if title == 'Profile' %}
         <li class="nav-item active">
       {% else %}
         <li class="nav-item">
       {% endif %}
-        <a class="nav-link" href="{{url_for('profile')}}">Profile</a>
+        <a class="nav-link" href="{{url_for('profile', username = current_user.username)}}">Profile</a>
       </li>
+
+      <li class="nav-item">
+      <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+    </li>
+
       {% if title == 'Login' %}
         <li class="nav-item active">
       {% else %}
@@ -51,6 +57,7 @@
       {% endif %}
         <a class="nav-link" href="{{url_for('login')}}">Login</a>
       </li>
+
       {% if title == 'Register' %}
         <li class="nav-item active">
       {% else %}
